{
    "name": "Controls",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "aba76f29-d6c6-48c4-a181-def3dbd756c1",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "cd4087e5-c2b1-4813-9fec-12d5e4768a52",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "d6930c85-0a21-4548-95f9-d186087694c1",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9dccf939-f926-4d92-81d8-66a872a90dec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TongueHolding",
                    "type": "Button",
                    "id": "eb01cd47-f777-48d1-b530-926216f952bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "TonguePressed",
                    "type": "Button",
                    "id": "4c1a46df-d2df-4ab1-ba1e-92894c4feae6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TongueReleased",
                    "type": "Button",
                    "id": "31526efa-e607-4e46-963a-b4805e2d25a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fbbfed9a-277c-4dde-874f-baaec3727959",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "132a1871-4e30-4b66-bd04-b44a8af570f3",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f97de342-39d5-47d7-9b2d-0ab450ef3cfd",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press,Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef274872-31a7-4e4a-a9cf-253580893fc3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TongueHolding",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7faacae7-1591-485d-bcbe-1e9f9c3a4e00",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TonguePressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3eeb20a-87d9-4409-816b-774136e5666b",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TongueReleased",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}